--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       model-viewer {
         width: 100vw;
-        height: 100vh;
+      aspect-ratio: 1/1;
         display: block;
         background-color: #7a9a01;
       }
