--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       body {
         margin: 0;
         padding: 0;
-        height: 100%;
+      aspect-ratio: 1/1;
         width: 100%;
         background-color: #7a9a01;
       }
